added javascript to html, created 2 javascript pages

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
 <body>
 	<textarea name="user_input" id="input" cols="40" rows="10" placeholder="Enter text here" autofocus></textarea>
-	<input type="radio" name="language" value="Norwegian">Norwegian
-	<input type="radio" name="language" value="Latin">Latin
-	<input type="radio" name="language" value="Portuguese">Portuguese
+	<input type="radio" name="language" id="norwegian" value="Norwegian">Norwegian
+	<input type="radio" name="language" id="latin"	value="Latin">Latin
+	<input type="radio" name="language" id="port" value="Portuguese">Portuguese
 	<button id="translate">Translate</button>
 	<div id="matrix"></div>
 	<div id="container"></div>
 	<div id="vessel"></div>
-<script type="text/javascript" src=""></script>
+<script type="text/javascript" src="primary.js"></script>
 </body>
 </html>
