Added norway.js, added this to html

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 	<div id="container"></div>
 	<div id="vessel"></div>
 <script type="text/javascript" src="primary.js"></script>
+<script type="text/javascript" src="norway.js"></script>
 </body>
 </html>
