added function to loop out the Norwegian words

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 	<div id="matrix"></div>
 	<div id="container"></div>
 	<div id="vessel"></div>
-<script src="latin.js"></script>
-<script type="text/javascript" src="primary.js"></script>
+
+
 <script type="text/javascript" src="norway.js"></script>
+<script type="text/javascript" src="latin.js"></script>
+<script type="text/javascript" src="primary.js"></script>
 </body>
 </html>
