--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div id="matrix"></div>
 	<div id="container"></div>
 	<div id="vessel"></div>
-<script src="latin.js"></script>
+<script type="text/javascript" src="portuguese.js"></script>	
 <script type="text/javascript" src="primary.js"></script>
 <script type="text/javascript" src="portuguese.js"></script>
 </body>
